name:                try-new-hasql
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lykrysh/try-new-hasql#readme
license:             BSD3
license-file:        LICENSE
author:              lykrysh
maintainer:          lykrysh@email.com
copyright:           none
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable try-new-hasql
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , configurator
                      , bytestring
                      , text
                      , Spock
                      , Spock-lucid
                      , Spock-digestive
                      , digestive-functors
                      , digestive-functors-lucid
                      , lucid
                      , hasql
                      , hasql-transaction
                      , wai-middleware-static
                      , wai-extra
  other-modules:      Types.Base
                    , Types.Films
                    , Init
                    , Db
                    , Actions
                    , Render.Base
                    , Render.Forms
  default-extensions: OverloadedStrings
                    , ViewPatterns
                    , NamedFieldPuns
                    , ScopedTypeVariables
